host/crates/core/tests/snapshots/goldens__body_over_cap.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (body_over_cap))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.4.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "rules", "pause", "resume", "prog"]
rules_ack 1: version Some("none"), active Some(0), 0 errors
replay begin: seq Some(1)..Some(1), Some(1) events
replay end: seq None..None, None events

txn 1 (call Some(8), hop 0): GET https://cdn.example.app/model.bin
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: cdn.example.app
  response: 200 OK Some("h2") · content-type: application/octet-stream | content-length: 3000
  state Complete · starts +0.000 ms · req +0.000 ms · ends +500.000 ms
  request body: None 0/0 B
  response body: Truncated 1024/3000 B, decoded 1024 B Binary

stats: 1 requests, 0 failed, 3080 B in, 73 B out, 0 dropped events
diag info started "traffic-police 0.4.0 (library) started in io.trafficpolice.test (pid 4242)" at +0.000 ms
diag info body_cap_reached "a body exceeded the capture cap; its size is still counted (set_config body_cap to raise it)" at +350.000 ms
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
