host/crates/core/tests/snapshots/goldens__failures.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (failures))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.1.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "rules", "pause", "resume", "prog"]
rules_ack 1: version Some("none"), active Some(0), 0 errors
replay begin: seq Some(1)..Some(1), Some(1) events
replay end: seq None..None, None events

txn 1 (call Some(10), hop 0): GET https://api.example.app/slow
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: api.example.app
  state Failed · starts +0.000 ms · req +0.000 ms · ends +10000.000 ms
  request body: None 0/0 B
  response body: Pending 0/0 B
  marks: resp_headers_start +0.000 ms
  conn Some("c-17") reused Some(true) Some("h2") 142.250.183.14:443 · Some("TLSv1.3") Some("TLS_AES_128_GCM_SHA256") · 1 certs
  failed: java.net.SocketTimeoutException: Some("timeout") (phase Some("response_headers"), canceled false, simulated false), causes [("java.net.SocketException", Some("Socket closed"))]

txn 2 (call Some(11), hop 0): GET https://api.example.app/slow
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: api.example.app
  state Failed · starts +10000.000 ms · req +10000.000 ms · ends +10300.000 ms
  request body: None 0/0 B
  response body: Pending 0/0 B
  failed: java.io.IOException: Some("Canceled") (phase Some("response_headers"), canceled true, simulated false), causes []

stats: 2 requests, 2 failed, 0 B in, 136 B out, 0 dropped events
diag info started "traffic-police 0.1.0 (library) started in io.trafficpolice.test (pid 4242)" at +0.000 ms
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
