host/crates/core/tests/snapshots/goldens__handshake_replay_and_control.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (handshake_replay_and_control))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.1.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "pause", "resume", "prog"]
rules_ack 1: version Some("none"), active Some(0), 0 errors
replay begin: seq Some(1)..Some(10), Some(10) events
replay end: seq None..None, None events
config_ack 2: CaptureConfig { recording: false, body_cap: 10485760, capture_request_bodies: true, capture_response_bodies: true, stack_depth: 32 }
pong 3: clock 5801545000000 / 1790658601545
rules_ack 4: version Some("r1"), active Some(0), 0 errors

txn 1 (call Some(1), hop 0): GET https://api.example.app/v1/status?id=7
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: api.example.app | Accept-Encoding: gzip | User-Agent: okhttp/4.12.0
  response: 200 OK Some("h2") · content-type: application/json | content-length: 11
  state Complete · starts +0.000 ms · req +0.000 ms · ends +45.000 ms
  request body: None 0/0 B
  response body: Complete 11/11 B, decoded 11 B Json "{\"ok\":true}"

stats: 1 requests, 0 failed, 81 B in, 128 B out, 0 dropped events
diag info started "traffic-police 0.1.0 (library) started in io.trafficpolice.test (pid 4242)" at +0.000 ms
diag info okhttp_detected "OkHttp 4.12.0 found" at +545.000 ms
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
