host/crates/core/tests/snapshots/goldens__post_request_body.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (post_request_body))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.4.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "rules", "pause", "resume", "prog"]
rules_ack 1: version Some("none"), active Some(0), 0 errors
replay begin: seq Some(1)..Some(1), Some(1) events
replay end: seq None..None, None events

txn 1 (call Some(6), hop 0): POST https://api.example.app/v1/enroll
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Content-Type: application/json; charset=utf-8 | Content-Length: 39 | Host: api.example.app
  response: 201 Created Some("h2") · content-type: application/json
  state Complete · starts +0.000 ms · req +0.000 ms · ends +121.000 ms
  request body: Complete 39/39 B, decoded 39 B Json "{\"session\":\"s_1\",\"document\":\"passport\"}"
  response body: Complete 17/17 B, decoded 17 B Json "{\"enrolled\":true}"
  conn Some("c-17") reused Some(true) Some("h2") 142.250.183.14:443 · Some("TLSv1.3") Some("TLS_AES_128_GCM_SHA256") · 1 certs

stats: 1 requests, 0 failed, 67 B in, 180 B out, 0 dropped events
diag info started "traffic-police 0.4.0 (library) started in io.trafficpolice.test (pid 4242)" at +0.000 ms
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
