host/crates/core/tests/snapshots/goldens__protocol_mismatch.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (protocol_mismatch))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.4.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "rules", "pause", "resume", "prog"]
bye: protocol_mismatch Some("host speaks protocol 2; this runtime supports 1"), supported [1]

stats: 0 requests, 0 failed, 0 B in, 0 B out, 0 dropped events
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
