host/crates/core/tests/snapshots/goldens__redirect.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (redirect))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.1.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "pause", "resume", "prog"]
rules_ack 1: version Some("none"), active Some(0), 0 errors
replay begin: seq Some(1)..Some(1), Some(1) events
replay end: seq None..None, None events

txn 1 (call Some(9), hop 0): GET https://api.example.app/old
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: api.example.app
  response: 302 Found Some("h2") · location: /new | content-length: 0
  state Complete · starts +0.000 ms · req +0.000 ms · ends +40.000 ms
  request body: None 0/0 B
  response body: None 0/0 B
  conn Some("c-17") reused Some(true) Some("h2") 142.250.183.14:443 · Some("TLSv1.3") Some("TLS_AES_128_GCM_SHA256") · 1 certs

txn 2 (call Some(9), hop 1): GET https://api.example.app/new
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: api.example.app
  response: 200 OK Some("h2") · content-type: application/json
  state Complete · starts +40.000 ms · req +40.000 ms · ends +75.000 ms
  request body: None 0/0 B
  response body: Complete 14/14 B, decoded 14 B Json "{\"moved\":true}"
  conn Some("c-17") reused Some(true) Some("h2") 142.250.183.14:443 · Some("TLSv1.3") Some("TLS_AES_128_GCM_SHA256") · 1 certs

stats: 2 requests, 0 failed, 117 B in, 134 B out, 0 dropped events
diag info started "traffic-police 0.1.0 (library) started in io.trafficpolice.test (pid 4242)" at +0.000 ms
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
