host/crates/core/tests/snapshots/goldens__rule_rewrite.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (rule_rewrite))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.4.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "rules", "pause", "resume", "prog"]
rules_ack 1: version Some("r1"), active Some(2), 0 errors
replay begin: seq Some(1)..Some(1), Some(1) events
replay end: seq None..None, None events

txn 1 (call Some(20), hop 0): GET https://api.example.app/api/sdk/status?sessionId=s1
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: api.example.app | Accept-Encoding: gzip
  response: 202 Accepted Some("h2") · content-type: application/json | content-encoding: gzip | cache-control: max-age=30
  state Complete · starts +0.000 ms · req +0.000 ms · ends +42.000 ms
  request body: None 0/0 B
  response body: Complete 52/52 B, decoded 33 B Json "{\"verdict\":\"pending\",\"attempt\":3}"
  conn Some("c-17") reused Some(true) Some("h2") 142.250.183.14:443 · Some("TLSv1.3") Some("TLS_AES_128_GCM_SHA256") · 1 certs
  rule force-pass at +42.000 ms: status 202→200 (OK) · header_set X-Debug · body_edit matches 1 · header_remove Content-Encoding (body_changed) · header_set Content-Length (body_changed) · header_set Cache-Control (cache_guard)
  delivered: 200 OK · content-type: application/json | X-Debug: 1 | Content-Length: 30 | Cache-Control: no-store
  delivered body: Complete 30/30 B, decoded 30 B Json "{\"verdict\":\"pass\",\"attempt\":3}"

txn 2 (call Some(21), hop 0): POST https://api.example.app/api/sdk/enroll
  OkHttp 4.12.0 · DefaultDispatcher-worker-3 #51 (Some("call")) · 4 frames (truncated), top com.example.app.api.StatusPoller.poll:Some(41)
  request: Host: api.example.app | Accept-Encoding: gzip
  state Failed · starts +42.000 ms · req +42.000 ms · ends +42.000 ms
  request body: Error 0/0 B
  response body: Pending 0/0 B
  rule enroll-down at +42.000 ms: delay ms 0 · fail java.io.IOException
  failed: java.io.IOException: Some("simulated by traffic-police") (phase Some("connect"), canceled false, simulated true), causes []

stats: 2 requests, 1 failed, 153 B in, 216 B out, 0 dropped events
diag info started "traffic-police 0.4.0 (library) started in io.trafficpolice.test (pid 4242)" at +0.000 ms
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
