host/crates/core/tests/snapshots/goldens__takeover.snap
---
source: crates/core/tests/goldens.rs
expression: summarize(stringify! (takeover))
---
hello: io.trafficpolice.test pid 4242 on API 36, runtime 0.5.0 (library), protocol 1, capabilities ["okhttp", "okhttp_events", "huc", "rules", "pause", "resume", "prog"]
rules_ack 1: version Some("none"), active Some(0), 0 errors
replay begin: seq Some(1)..Some(1), Some(1) events
replay end: seq None..None, None events
bye: replaced Some("another host connected"), supported []

stats: 0 requests, 0 failed, 0 B in, 0 B out, 0 dropped events
diag info started "traffic-police 0.5.0 (library) started in io.trafficpolice.test (pid 4242)" at +0.000 ms
marker Attach "io.trafficpolice.test pid 4242" at +0.000 ms
